fix assign to bug

--- a/app/partials/stories.html
+++ b/app/partials/stories.html
@@ -648,7 +648,7 @@
                             </div>
                             <div class="form-group"  ng-if='isTeamLeader'>
                                 <div class="select-option m-0" style="width:100%;">
-                                       <select class="select2" ng-model="assignto" id="selectassign" ng-options="[member.name,' ',member.surname,', ',member.role.Text].join('') for member in team track by member.order">
+                                       <select select-two ng-model="$parent.assignto" id="selectassign" ng-options="[member.name,' ',member.surname,', ',member.role.Text].join('') for member in team track by member.order">
                                     </select>
                                 </div>
                             </div>
