--- a/app/partials/hourreports.html
+++ b/app/partials/hourreports.html
@@ -75,7 +75,8 @@
                                               <div class="select-year">
 
                                                   <select class="select2" id="selectedyear" ng-click="changeDate()">
-                                                    <option value="2017" selected="selected">2017</option>
+                                                    <option value="2018" selected="selected">2017</option
+                                                    <option value="2017" >2017</option>
                                                     <option value="2016">2016</option>
                                                     <option value="2015">2015</option>
                                                     <option value="2014">2014</option>
