--- a/app/partials/invoice.html
+++ b/app/partials/invoice.html
@@ -32,7 +32,8 @@
                                          <div class="form-group fleft mr10 mb10">
                                              <div class="select-option select-project m-0" style="width: 150px;">
                                                  <select select-two ng-model="year" ng-change="changeDate()">
-                                                     <option selected="selected">2017</option>
+                                                    <option selected="selected">2018</option>
+                                                     <option >2017</option>
                                                      <option >2016</option>
                                                      <option>2015</option>
                                                  </select>
